-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.1
-
None
-
-
38fde456a (11.0)
When hovering over an in-text qrc resource path to an image
e.g. QIcon(u":/ExampleResource/image.png"_s);
Qt Creator will hang for 3-5s before showing a placeholder icon
Attached is a screenshot of the output.
I have also attached a minimal reproducible project. Please let me know if any further information is required.

| For Gerrit Dashboard: QTCREATORBUG-29217 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 480527,2 | CppEditor: use markdown for resource image tooltips | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |