CppEditor: use markdown for resource image tooltips

Fixes: QTCREATORBUG-29217
Change-Id: Iba3d876d988336276996aac733a6ea9b0eb45882
Reviewed-by: Eike Ziller <eike.ziller@qt.io>